Fix orderbook overlapping other divs

--- a/exchange/spot/css/styles.css
+++ b/exchange/spot/css/styles.css
@@ -10,6 +10,7 @@
 
 #orderbook-buy, #orderbook-sell {
     height: 360px;
+    overflow: hidden;
 }
 
 #orderbook-sell .row {
